# near-git-storage

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  build.sh
.cargo/: config.toml
.github/workflows/: docker.yml  test.yml
e2e/: package-lock.json  package.json  playwright.config.js  serve.mjs
e2e/public/: _headers  _redirects  create-repo.html  index-sw.html  index.html  lg2_opfs.js  lg2_opfs.wasm  near-git-sw.js  testnet.html  worker.js
e2e/public/wasm-lib/: wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
e2e/tests/: create-repo.spec.js  http-server.spec.js  service-worker.spec.js
e2e/tests/helpers/: mock-wallet.js  sandbox-rpc.js
factory/: Cargo.toml
factory/src/: lib.rs
factory/web4/: index.html  index.html.base64
git-core/: Cargo.toml
git-core/src/: lib.rs  packfile.rs  pktline.rs
git-remote-near/: Cargo.toml
git-remote-near/src/: main.rs
git-server/: Cargo.toml
git-server/src/: main.rs
src/: lib.rs
tests/: factory.rs  integration.rs
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
