[workspace]
members = ["git-core", "git-remote-near", "git-server", "wasm-lib", "factory"]

[package]
name = "near-git-storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.17"

[dev-dependencies]
near-sandbox = { version = "0.3", features = ["generate"] }
near-api = "0.8"
near-token = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
sha1 = "0.10"
base64 = "0.22"
borsh = "1"
near-sdk = { version = "5.17", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
