[package]
name = "git-remote-near"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-remote-near"
path = "src/main.rs"

[dependencies]
git-core = { path = "../git-core" }
near-api = "0.8"
base64 = "0.22"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
