[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

[dependencies]
git-core = { path = "../git-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
near-sandbox = { version = "0.3", features = ["generate", "global_install"] }
near-api = "0.8"
near-token = "0.3"
sha1 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = "0.12"
