[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
git-core = { path = "../git-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
js-sys = "0.3"
